Fix padding of fac-reason on mobile screens

--- a/styles/style-1.css
+++ b/styles/style-1.css
@@ -212,7 +212,7 @@ h4 {
   padding: 5%;
   border: solid thin lightgray;
   border-radius: 7%;
-  margin-bottom: 8%;
+  margin-bottom: 12%;
   box-shadow: 0px 6px 10px lightgray;
 }
 
@@ -645,7 +645,12 @@ img {
   display: none;
 }
 
+@media (min-width: 550px) {
 
+  .fac-reason {
+    margin-bottom: 8%;
+  }
+}
 
 /* --------------------STYLING FOR DIFFERENT SCREEN SIZES--------------------------- */
 /* Properties for larger screens */
