--- a/styles/style-2.css
+++ b/styles/style-2.css
@@ -215,7 +215,7 @@ h4 {
   padding: 5%;
   border: solid thin #b8e0b9;
   border-radius: 7%;
-  margin-bottom: 8%;
+  margin-bottom: 12%;
   box-shadow: 0px 6px 10px #b8e0b9;
 }
 
@@ -655,6 +655,12 @@ img {
   display: none;
 }
 
+@media (min-width: 550px) {
+
+  .fac-reason {
+    margin-bottom: 8%;
+  }
+}
 
 
 /* --------------------STYLING FOR DIFFERENT SCREEN SIZES--------------------------- */
