--- a/styles/style-5.css
+++ b/styles/style-5.css
@@ -215,7 +215,7 @@
     padding: 5%;
     border: solid thin #F69529;
     border-radius: 7%;
-    margin-bottom: 8%;
+    margin-bottom: 12%;
     box-shadow: 0px 6px 10px #F69529;
   }
   
@@ -655,7 +655,12 @@
     display: none;
   }
   
-  
+  @media (min-width: 550px) {
+
+    .fac-reason {
+      margin-bottom: 8%;
+    }
+  }
   
   /* --------------------STYLING FOR DIFFERENT SCREEN SIZES--------------------------- */
   /* Properties for larger screens */
